# vamp-fun

./: .gitignore  .gitmodules  LICENSE  README.md  address  calldata_example  check_versions.sh  cloudbuild.yaml  deploy-cleanapp.sh  deploy.sh  install_docker.sh  key  priv  pub  solver_output_example.json
abis/: CallBreakerEVM.json
appchain/core/: Cargo.toml
appchain/core/src/: lib.rs
appchain/storage-redis/: Cargo.toml
appchain/storage-redis/src/: lib.rs
claim_solver/: Cargo.toml
crates/balance_util/: Cargo.toml
crates/balance_util/src/: lib.rs
crates/intent_id_util/: Cargo.toml
crates/intent_id_util/src/: lib.rs
crates/merkle_tree/: Cargo.toml
crates/merkle_tree/src/: lib.rs
crates/solana_transaction_util/: Cargo.toml
crates/solana_transaction_util/src/: lib.rs
db/: Dockerfile  build_db_image.sh  init.sql  set_passwords.sh
db/patches/: 2025-07-15.sql  2025-07-16.sql  2025-07-19.sql
doc/: test_vamping_params.md
ethereum/Vamper/: .env.example  deploy.sh  foundry.toml  verify.sh
ethereum/Vamper/broadcast/DeployTokenClaim.s.sol/84532/: run-1767979455877.json  run-1767980389169.json  run-latest.json
ethereum/Vamper/config/: networks.json
ethereum/Vamper/script/: BaseDeployer.s.sol  DeployTokenClaim.s.sol  DeployTokenVampBump.s.sol  DeployVampTokenEmitterUpgradeable.s.sol  VampTokenEmitterUpgradeable.s.sol  Vamper.s.sol
ethereum/Vamper/src/: MockERC20MetadataURI.sol  TokenClaim.sol  TokenVampBump.sol  VampTokenEmitterUpgradeable.sol  Vamper.sol
ethereum/Vamper/test/: TokenClaim.t.sol  TokenVampBump.t.sol  VampTokenEmitterUpgradeable.t.sol
event_indexer/: Cargo.toml  run_local.sh
event_indexer/src/: app_state.rs  cfg.rs  db_init.rs  eth_client.rs  event_publisher.rs  events.rs  indexer.rs  main.rs  vamper_event.rs
evm/: .gitignore  README.md
evm/broadcast/Vamp.s.sol/21363/: run-1750330312.json
evm/script/: Vamp.s.sol
evm/src/: Vamp.sol
evm/test/: Vamp.t.sol
fe_docker/: Dockerfile  README.md  build_image.sh  cloudbuild.yaml  test_build.sh
idl/: vamp.json
idls/: solana_vamp_program.json
orchestrator_simulate/: Cargo.toml  build.rs
orchestrator_simulate/src/: main.rs
orchestrator_stub/: Cargo.toml  README.md  build.rs
orchestrator_stub/config/: orchestrator.toml
orchestrator_stub/src/: main.rs
orchestrator_stub/src/or/: grpc_service.rs  mod.rs  orch_grpc_service.rs  solana_orchestrator.rs  storage.rs
orchestrator_stub/src/proto/: mod.rs
orchestrator_stub_docker/: .version  Dockerfile  build_image.sh
orchestrator_stub_docker/config/: config_template.toml
proto/: state_snapshot.proto  stxn.proto  user_objective.proto  vamp_fun.proto
proto-example/: Cargo.toml  build.rs
proto-example/src/: main.rs
registrator_stub/: Cargo.toml  build.rs
registrator_stub/config/: config.toml
registrator_stub/src/: main.rs
registrator_stub/src/proto/: mod.rs
registrator_stub/src/rr/: ethereum_listener.rs  grpc_service.rs  mod.rs  rr_grpc_service.rs  storage.rs
registrator_stub/src/utils/: crypto.rs
registrator_stub_docker/: .version  Dockerfile  build_image.sh
registrator_stub_docker/certificates/: base.org.cer
registrator_stub_docker/config/: config_template.toml
request_register_simulate/: Cargo.toml
request_register_simulate/src/: main.rs
scripts/fe-testing/: test_raw_bytes  test_raw_bytes.rs  test_tohex.js  test_tohex.ts
scripts/solana/: README.md  inspect_vamp_state.js  inspect_vamp_state.sh  package.json  parse_transaction.js  test_endianness.js  vamp_state_debug.json  vamp_state_debug_v2.json
send_simulate/: Cargo.toml  build.rs
send_simulate/src/: main.rs
solana/: Anchor.toml  BONDING_CURVE.md  Cargo.toml  README.md  package.json  rust-toolchain.toml
solana/crates/anchor-syn/: .cargo_vcs_info.json
solana/programs/solana-vamp-program/: Cargo.toml  build.rs
solana/programs/solana-vamp-program/src/: event.rs  lib.rs  use_proto.rs  util.rs
solana/programs/solana-vamp-program/src/instructions/: calculate_claim_cost.rs  claim.rs  initialize.rs  mod.rs
solana/programs/solana-vamp-program/src/state/: mod.rs  vamp_state.rs
solana/tests/: solana-vamp-program.ts
solver/: Cargo.toml  build.rs  run_local.sh
solver/db/: build_db_image.sh  init.sql  setup.sql
solver/db/patches/: 2025-01-08.sql  2025-05-01.sql  2025-05-21.sql  2025-05-22.sql
solver/src/: appchain_listener.rs  args.rs  chain_info.rs  db_init.rs  events.rs  http_handler.rs  main.rs  merkle_tree.rs  mysql_conn.rs  request_handler.rs  request_handlers.rs  request_registrator_listener.rs  send_transaction.rs  snapshot_indexer.rs  snapshot_processor.rs  solana_transaction.rs  state_snapshot.rs  state_snapshot_handler.rs  stats.rs  use_proto.rs  user_objective_handler.rs  vamper_event.rs
solver_claim/: Cargo.toml
solver_claim/src/: cfg.rs  event_handler.rs  event_subscriber.rs  events.rs  main.rs
solver_cleanapp/: .version  Cargo.toml  Dockerfile  build.rs  build_image.sh
solver_cleanapp/src/: main.rs
solver_clone/: Cargo.toml  run_local.sh
solver_clone/src/: args.rs  cfg.rs  chain_info.rs  db_init.rs  event_handler.rs  event_subscriber.rs  http_handler.rs  main.rs  mysql_conn.rs  request_handler.rs  request_registrator_listener.rs  snapshot_indexer.rs  snapshot_processor.rs  solana_transaction.rs  stats.rs
solver_docker/: .version  Dockerfile  build_image.sh
srfc/: srfc01.md  srfc02.md
token_holders/: Cargo.toml  out.1
token_holders/src/: main.rs
ui-mock/claiming/: .gitignore  Cargo.toml  README.md
ui-mock/claiming/src/: main.rs
validator_vamp/: Cargo.toml  README.md  build.rs
validator_vamp/config/: config.toml  validator_vamp_config.toml
validator_vamp/src/: lib.rs
validator_vamp/src/proto/: mod.rs
validator_vamp/src/validator_vamp/: config.rs  ipfs_service.rs  mod.rs  storage.rs  validator_grpc_service.rs
validator_vamp_docker/: .version  Dockerfile  README.md  build_image.sh
validator_vamp_docker/certificates/certificates/: base.org.cer
vamping_data_mock/: Cargo.toml  build.rs
vamping_data_mock/src/: main.rs
(+8 files in other folders)
