[package]
name = "event_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.5.2"
alloy-provider = "1.2.1"
alloy-rpc-types = "1.2.1"
alloy-transport-http = "1.2.1"
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.53", features = ["derive", "env"] }
cleanapp_rustlib = { git = "https://github.com/cleanappio/cleanapp-rustlib", tag = "v1.1.7" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["mysql"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
urlencoding = "2.1.3"
