[package]
name = "orchestrator_simulate"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
ethers = "2.0.14"
futures = "0.3.31"
pbjson = "=0.5.0"
pbjson-types = "=0.5.0"
prost = "0.13.5"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.13.0"

[build-dependencies]
pbjson-build = "0.7.0"
tonic-build = "0.13.0"
