[package]
name = "vamp_fun_orchestrator_stub"
version = "1.0.20"
edition = "2024"
build = "build.rs"

[dependencies]
anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang = "0.31.0"
solana-sdk = "2.2.2"
spl-token = "8.0.0"
spl-associated-token-account = "6.0.0"
mpl-token-metadata = "5.1.0"
tokio = { version = "1.44.1", features = ["full"] }
tonic = { version = "0.13.0", features = ["transport"] }
tonic-reflection = "0.13"
redis = { version = "0.29.5", features = ["tokio-comp"] }
hex = "0.4.3"
sha3 = "0.10.8"
pbjson = "=0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
log = "0.4.27"
env_logger = "0.11.8"
config = "0.15.11"
futures-util = "0.3.31"
prost = "0.13.5"
prost-reflect = "0.14.7"
clap = { version = "4.5.37", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.0"
pbjson-build = "=0.5.0"
prost-build = "0.13.0"
