[package]
name = "vamp_fun_orchestrator_stub"
version = "1.0.32"
edition = "2024"
build = "build.rs"

[dependencies]
solana-sdk = "2.2.2"
tokio = { version = "1.44.1", features = ["full"] }
tonic = { version = "0.13.0", features = ["transport"] }
tonic-reflection = "0.13"
redis = { version = "0.29.5", features = ["tokio-comp"] }
hex = "0.4.3"
sha3 = "0.10.8"
pbjson = "=0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
log = "0.4.27"
env_logger = "0.11.8"
config = "0.15.11"
futures-util = "0.3.31"
prost = "0.13.5"
prost-reflect = "0.14.7"
clap = { version = "4.5.37", features = ["derive"] }
solana-client = "2.2.7"
solana-commitment-config = "2.2.1"
postcard = "1.1.1"
appchain-core = { path = "../appchain/core" }
appchain-storage-redis = { path = "../appchain/storage-redis" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
tonic-build = "0.13.0"
pbjson-build = "=0.5.0"
prost-build = "0.13.0"
