[package]
name = "vamp_fun_registrator_stub"
version = "1.0.15"
edition = "2024"
build = "build.rs"

[dependencies]
web3 = { version = "0.19.0" }
ethers = { version = "2.0.14", features = ["ws"] }
tokio = { version = "1.44.1", features = ["full"] }
tonic = { version = "0.13.0", features = ["transport"] }
tonic-reflection = "0.13"
redis = { version = "0.29.5", features = ["tokio-comp"] }
hex = "0.4.3"
sha3 = "0.10.8"
pbjson = "=0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
log = "0.4.27"
env_logger = "0.11.8"
config = "0.15.11"
futures-util = "0.3.31"
prost = "0.13.5"
prost-reflect = "0.14.7"

[build-dependencies]
tonic-build = "0.13.0"
pbjson-build = "=0.5.0"
prost-build = "0.13.0"
