[package]
name = "vamp-fun-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
clap = { version = "4.5.34", features = ["derive"] }
ethers = "2.0.14"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
mysql = "26.0.0"
prost = "0.13.5"
prost-reflect = "0.14.7"
rabbitmq-stream-client = "0.8.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha3 = "0.10.8"
stderrlog = "0.6.0"
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.13.0"
tower-http = { version = "0.6.2", features = ["cors"] }

[build-dependencies]
tonic-build = "0.13.0"
