[package]
name = "vamp-fun-solver"
version = "1.0.83"
edition = "2024"

[profile.release]
panic = "unwind"

[dependencies]
balance_util = { path = "../crates/balance_util" }
merkle_tree = { path = "../crates/merkle_tree" }
axum = "0.8.3"
clap = { version = "4.5.34", features = ["derive"] }
ethers = "2.0.14"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
mysql = "26.0.0"
parse_duration = "2.1.1"
prost = "0.13.5"
prost-reflect = "0.14.7"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha3 = "0.10.8"
stderrlog = "0.6.0"
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.13.0"
tower-http = { version = "0.6.2", features = ["cors"] }
chrono = "0.4.40"
urlencoding = "2.1.3"
bs58 = "0.5.1"
mpl-token-metadata = "5.1.0"
solana-sdk = "2.2.2"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
postcard = { version = "1.1.1", features = ["alloc"] }

[build-dependencies]
tonic-build = "0.13.0"
