[package]
name = "vamp-fun-solver-clone"
version = "1.0.107"
edition = "2024"

[profile.release]
panic = "unwind"

[dependencies]
alloy = { version = "1.2.1", features = ["providers", "signers", "signer-local", "rpc-types", "transports", "transport-http", "reqwest"] }
alloy-primitives = "1.5.2"
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anyhow = "1.0.100"
axum = "0.8.8"
balance_util = { path = "../crates/balance_util" }
bs58 = "0.5.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
cleanapp_rustlib = { git = "https://github.com/cleanappio/cleanapp-rustlib", tag = "v1.1.7" }
futures = "0.3.31"
hex = "0.4.3"
intent_id_util = { path = "../crates/intent_id_util" }
log = "0.4.29"
mpl-token-metadata = "5.1.1"
parse_duration = "2.1.1"
postcard = { version = "1.1.3", features = ["alloc"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.148"
sha3 = "0.10.8"
solana-client = "2.2.7"
solana-commitment-config = "2.2.1"
solana-sdk = "2.2.2"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
urlencoding = "2.1.3"
