[package]
name = "validator_vamp"
version = "1.0.1"
edition = "2024"
build = "build.rs"

[[bin]]
name = "validator_vamp"
path = "src/bin/validator_vamp.rs"

[[bin]]
name = "ipfs_publisher"
path = "src/bin/ipfs_publisher.rs"

[dependencies]
web3 = { version = "0.19.0" }
ethers = { version = "2.0.14", features = ["ws"] }
tokio = { version = "1.44.1", features = ["full"] }
tonic = { version = "0.13.0", features = ["transport"] }
tonic-reflection = "0.13"
redis = { version = "0.31.0", features = ["tokio-comp"] }
hex = "0.4.3"
sha3 = "0.10.8"
pbjson = "=0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
log = "0.4.27"
env_logger = "0.11.8"
config = "0.15.11"
futures-util = "0.3.31"
prost = "0.13.5"
prost-reflect = "0.15.2"
rand = "0.8.5"
reqwest =  { version = "0.12.15", features = ["multipart", "json"] }
walkdir = "2.5.0"
clap = { version = "4.5.38", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.0"
pbjson-build = "=0.5.0"
prost-build = "0.13.0"
