[package]
name = "appchain-storage-redis"
version = "0.1.0"
edition = "2024"

[lib]
name = "appchain_storage_redis"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.83"
redis = { version = "0.29.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
appchain-core = { path = "../core" } 