[package]
name = "solana_transaction_util"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anyhow = "1.0.100"
mpl-token-metadata = "5.1.1"
solana-client = "2.2.7"
solana-commitment-config = "2.2.1"
solana-sdk = "2.2.2"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
