[package]
name = "claiming-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
sha3 = "0.10"
spl-token = "4.0"
spl-associated-token-account = "2.0"
libsecp256k1 = "0.7"
solana-transaction-status = "1.17"
reqwest = { version = "0.11", features = ["json"] } 