[package]
name = "solana-vamp-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_vamp_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["metadata"] }
prost = "0.13.5"
hex = "0.4.3"
libsecp256k1 = "0.7.2"
balance_util = { path = "../../../crates/balance_util"}
rust_decimal = { version = "1.39.0", features = ["macros"] }

[build-dependencies]
prost-build = "0.13.5"

